--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
+aiohttp==3.9.1
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
 asgiref==3.7.2
+attrs==23.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
 Django==5.0
 django-macaddress==1.8.0
+frozenlist==1.4.1
+idna==3.6
+multidict==6.0.4
 netaddr==0.9.0
+PyJWT==2.8.0
 python-dotenv==1.0.0
+requests==2.31.0
 sqlparse==0.4.4
+twilio==8.11.0
 tzdata==2023.3
+urllib3==2.1.0
+yarl==1.9.4
